# AndroidReversePractice

./: README.md
ActivityHijacking/: README.md  settings.gradle
ActivityHijacking/app/: build.gradle
ActivityHijacking/gradle/wrapper/: gradle-wrapper.properties
ActivityOverPermission/: README.md  settings.gradle
ActivityOverPermission/app/: build.gradle
ActivityOverPermission/gradle/wrapper/: gradle-wrapper.properties
ActlyLoadComp/: README.md  settings.gradle
ActlyLoadComp/app/: build.gradle
ActlyLoadComp/app/src/main/: AndroidManifest.xml
ActlyLoadComp/gradle/wrapper/: gradle-wrapper.properties
ActlyLoadCompTestApp/: README.md  settings.gradle
ActlyLoadCompTestApp/app/: build.gradle
ActlyLoadCompTestApp/gradle/wrapper/: gradle-wrapper.properties
ActlyLoadNoComp/: README.md  settings.gradle
ActlyLoadNoComp/README.attachment/: NoComponent.java
ActlyLoadNoComp/app/: build.gradle
CppEncryptTest/: CMakeLists.txt  crypt.cpp
CppEncryptTest/fcrypt/: base64.cpp  fcrypt.h  rc4.cpp  tea.cpp
Crack/: 20220109-ESFileExplorer.md  20220110-AdGuard.md  20220110-清浊.md  20220114-猛鬼宿舍.md  20220317-168轻断食.md
EncryptAndMailTest/: pom.xml
FirstJni/: README.md  settings.gradle
FirstJni/app/: build.gradle
FirstXposed/: README.md  build.gradle  settings.gradle
FirstXposed/app/: build.gradle
FridaTestApp/: README.md  settings.gradle
FridaTestApp/FRIDACODE/: frida_beginner.js  frida_rpc.js  native.js  rpc_loader.py  watch_onclick.js
FridaTestApp/app/: build.gradle
Tab_ViewPage2/: build.gradle  settings.gradle
Tab_ViewPage2/app/: build.gradle
(+133 files in other folders)
